WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259789
dtoa/utils.h doesn't parse after recent SDK changes
https://bugs.webkit.org/show_bug.cgi?id=259789
Summary
dtoa/utils.h doesn't parse after recent SDK changes
Tim Horton
Reported
2023-08-03 12:25:00 PDT
dtoa/utils.h doesn't parse after recent SDK changes
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2023-08-03 12:25:06 PDT
<
rdar://problem/113341253
>
Tim Horton
Comment 2
2023-08-03 12:28:43 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16355
EWS
Comment 3
2023-08-03 13:21:24 PDT
Committed
266550@main
(9bd05bda44cc): <
https://commits.webkit.org/266550@main
> Reviewed commits have been landed. Closing PR #16355 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug